--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "buttercms": "^3.0.0",
     "camelcase-keys": "^9.1.2",
     "date-fns": "^3.3.1",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "15.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "sharp": "^0.33.2",
     "tiny-slider": "^2.9.4",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "15.3.1",
     "glob": "^10.3.10",
     "rimraf": "^5.0.5"
   },
